--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    max-width: 100vh;
     margin: 0;
     overflow: auto;
 }
