--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    max-height: 100vh;
     min-width: 100vh;
     margin: 0;
     overflow: auto;
