--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@ h1 {
     grid-template-columns: repeat(9, 1fr);
     grid-template-rows: repeat(9, 1fr);
     border: 1px solid #000;
-    max-width: 90vw;
+    max-height: 100vh;
+    max-width: 95vw;
     margin: 0 auto;
 }
 
